API/onify-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onify-api
  labels:
    app: onify
    tier: api
spec:
  selector:
    matchLabels:
      app: onify
      tier: api
  template:
    metadata:
      labels:
        app: onify
        tier: api
    spec:
      imagePullSecrets:
      - name: onify-regcred
      containers:
      - name: api
        image: eu.gcr.io/onify-images/hub/api:2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1500Mi"
            cpu: "1"
          limits:
            memory: "2000Mi"
            cpu: "2"
        volumeMounts:
        - name: resources
          mountPath: /usr/share/onify
        ports:
        - name: api
          containerPort: 8181
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: onify-resources-pvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 25%
