API/onify-api-worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onify-worker
  labels:
    app: onify
    tier: worker
spec:
  selector:
    matchLabels:
      app: onify
      tier: worker
  template:
    metadata:
      labels:
        app: onify
        tier: worker
    spec:
      imagePullSecrets:
       - name: onify-regcred
      containers:
      - name: worker
        image: eu.gcr.io/onify-images/hub/api:2.10.0
        args:
        - worker # act as worker
        volumeMounts:
        - name: resources
          mountPath: /usr/share/onify
      volumes:
        - name: resources
          persistentVolumeClaim:
            claimName: onify-worker-resources-pvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 25%
