API/onify-api-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: onify-api-test
  namespace: onify-test
spec:
  host: onify-api-test.it.helsinki.fi
  to:
    kind: Service
    name: onify-api
    weight: 100
  port:
    targetPort: onify-api-443
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
